# tofu-docs

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Dockerfile  LICENSE.md  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  ruff.toml  tofu-docs.py
.github/workflows/: build.yml
lib/: const.py  formatter.py  hcl_file.py  hcl_module.py  settings.py  types.py  writer.py
lib/common/: formatter.py  helper.py
lib/models/: config.py  dummy.py  input.py  output.py  writer.py
