[project]
name    = "tofu-docs"
version = "0.0.1"
requires-python = ">=3.14"
dependencies = [
    "python-hcl2==8.1.2",
    "pydantic>=2.11.4",
    "colorlog>=6.9.0",
    "ruamel-yaml>=0.18.10",
    "tabulate>=0.9.0",
    "pydantic-settings>=2.9.1",
    "mdit-plain>=1.0.1",
    "markdown-it-py>=3.0.0",
    "gitpython>=3.1.44"
]

[tool.pydoclint]
style                       = "google"
arg-type-hints-in-docstring = false
check-return-types          = true
check-yield-types           = true
